syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.kotlinerskt.kotlinaut";
option java_outer_classname = "GameProto";

package game;

service Game {
  rpc Register (RegisterClientRequest) returns (RegisterClientResponse) {}
}

message RegisterClientRequest {
  string clientId = 1;
}

message RegisterClientResponse {
  string clientId = 1;
  string token = 2;
}
